<resources>
    <string name="app_name">TeamChat</string>
    <string name="TeamChatTextView">Welcome</string>
    <string name="RegisterTextView">Register</string>
    <string name="HasUserAlreadyTextView">Have an account? </string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="hintDisplayName">Display Name</string>
    <string name="Click_Here">Click here</string>
    <string name="LoginTextView">Login</string>
    <string name="Login">Login</string>
    <string name="NoAccount">Don\'t have an account? </string>
    <string name="SignUp">Sign up</string>
    <string name="ProfilePictureString">Profile picture</string>
    <string name="usernameTermsMessage">Username must be between 2 and 10 characters.</string>
    <string name="passwordTermsMessage">Password must be 8–16 characters long and contain English letters and numbers.</string>
    <string name="imSend">sendButton</string>
    <string name="tvUsername">User Name</string>
    <string name="imContact">SearchButton</string>
    <string name="etMessage">Message</string>
    <string name="etHintMessage">Enter Message</string>
    <string name="userUrl">http://10.0.2.2:5000/api/</string>
    <string name="teamChat">TeamChat</string>
    <string name="searchButton">SearchButton</string>
    <string name="addButton">AddButton</string>
    <string name="preferencesButton">preferencesButton</string>
    <string name="currentTime">Current time</string>
    <string name="ivProfilePic">ProfilePic\n</string>
    <string name="etEnterUsername">Enter username</string>
    <string name="AddNewContact">Add Contact\n</string>
    <string name="search_contacts">Search contacts...</string>
    <string name="nightTheme">Change to night theme</string>
    <string name="suggestUrl">Enter Url</string>
    <string name="switchUrl">Click here To switch Url</string>
    <string name="Setting">Settings</string>
    <string name="errorMessage">Invalid username or password</string>
    <string name="displayNameTermsMessage">Display name must be between 2 and 10 characters.</string>
    <string name="Logout">logout</string>
    <string name="channel_name">Main channel</string>
    <string name="channel_description">TeamChat</string>
    <string name="for_example_http_10_100_102_85_5000">For example: http://10.100.102.85:5000</string>
    <!--    <string name="userUrl">http://192.168.221.1:5000/api/Users/</string>-->

    <!--  from 11.06.2023 strings  -->
</resources>