<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical">

    <EditText
        android:id="@+id/SettingsET"
        android:hint="@string/suggestUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/SwitchUrlBtn"
        android:text="@string/switchUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nightTheme"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/SwitchModeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>