<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TeamChatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/TeamChatTextView"
        android:textColor="@color/blue"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LoginTextViewInLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TeamChatTextView"
        android:gravity="center"
        android:text="@string/LoginTextView"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditTextInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/edittext_rounded_background"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/hintUsername"
            android:padding="20dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />

        <EditText
            android:id="@+id/PasswordEditTextInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_rounded_background"
            android:drawableStart="@drawable/baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/hintPassword"
            android:padding="20dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoAccount"
                android:textColor="@color/blue"
                android:layout_marginEnd="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="37dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="navigateToRegistrationScreen"
                android:text="@string/SignUp"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>