<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chats.ChatScreen">

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imContact"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/imContact"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tvUsername"
            android:textSize="24sp" />

    </LinearLayout>
<!--    android:background="@drawable/listview_border"-->
<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->

<!--        app:layout_constraintBottom_toTopOf="@id/messageLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@id/contactLayout">-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvChat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:stackFromBottom="true"
            app:layout_constraintBottom_toTopOf="@id/messageLayout"
            app:layout_constraintTop_toBottomOf="@id/contactLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/item_send_message"/>

<!--    </FrameLayout>-->

    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        android:background="@drawable/edittext_background"/-->
        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/etHintMessage"
            android:imeOptions="actionSend"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/ibSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/blue"
            android:contentDescription="@string/imSend"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
